--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Coursera</title>
 </head>
 <body>
-<h1>Hello coursera! It's a greate course! and yogev is the king</h1>
+<h1>Hello coursera! this is module 2 solution</h1>
 </body>
 </html>
